--- a/react-coding-challenge/package.json
+++ b/react-coding-challenge/package.json
@@ -13,6 +13,8 @@
     "next": "12.2.3",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-infinite-scroll-component": "^6.1.0",
+    "react-spinners": "^0.13.3",
     "unsplash-js": "^7.0.15"
   },
   "devDependencies": {
